# vibrantLinux

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build.sh  device.cpp  device.h  display.cpp  display.h  displaytab.cpp  displaytab.h  entryeditor.cpp  entryeditor.h  entryeditor.ui  flake.nix  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  procmonitor.cpp  procmonitor.h  programentry.cpp  programentry.h  programinfo.h  resources.qrc  update.sh  utils.cpp  utils.h  vibrantLinux  vibrantLinux.pro  vibrantLinux.pro.user.783ca7a
assets/: application.desktop.in  autostart.desktop  autostart.desktop.in  io.github.libvibrant.vibrantLinux.appdata.xml  io.github.libvibrant.vibrantLinux.desktop  io.github.libvibrant.vibrantLinux.desktop.in  io.github.zeemzha.vibrantLinux.appdata.xml  io.github.zeemzha.vibrantLinux.desktop.in
forms/: entryeditor.ui  mainwindow.ui
include/: autostart.h  ctmcontroller.h  displaycontroller.h  displaymanager.h  displaytab.h  entryeditor.h  mainwindow.h  nvidiacontroller.h  procmonitor.h  procscanner.h  programinfo.h  utils.h  vibrantcontroller.h
nix/: package.nix
src/: autostart.cpp  autostart.h  ctmcontroller.cpp  displaymanager.cpp  displaymanager.h  displaytab.cpp  displaytab.h  displaytab.ui  entryeditor.cpp  entryeditor.h  entryeditor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nvidiacontroller.cpp  procmonitor.cpp  procscanner.cpp  procscanner.h  programinfo.h  utils.cpp  vibrantcontroller.cpp
